tests/errors/syn_if3.java
public class syn_if3{
public static void main(String[] args){
 if ( ) { }
}
}